--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Text Entry System"
+      content="Yapper - Your Personal Journal Assistant"
     />
-    <title>Text Entry System</title>
+    <title>Yapper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
